styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html,
  body {
    @apply p-0 m-0 tracking-tight text-neutral-900;
    font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
      Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
      sans-serif;
  }

  @font-face {
    font-family: Inter;
    font-weight: 1 999;
    font-display: optional;
    src: url("/inter-var-font.woff2") format("woff2");
  }

  h1 {
    @apply font-medium text-2xl xl:text-5xl;
  }

  h2 {
    @apply font-medium text-lg;
  }

  h3 {
    @apply font-medium text-base;
  }

  h4 {
    @apply font-medium text-xl;
  }

  h5 {
    @apply font-medium text-base;
  }

  h6 {
    @apply font-medium text-sm;
  }

  label {
    @apply font-medium mb-2 inline-block;
  }

  input {
    @apply placeholder:text-base placeholder:tracking-tight placeholder:font-light
        focus:border-amber-700 focus:ring-0 border focus:outline-none
        w-full rounded p-2 tracking-tight font-normal text-base border-gray-300
        read-only:bg-gray-300 read-only:border-gray-300 read-only:focus:ring-0 read-only:focus:border-gray-300 read-only:text-gray-500;
  }
}

@layer components {
  .basic-transition {
    @apply transition-all duration-200 ease-in-out;
  }

  .button-small {
    @apply flex items-center border border-gray-400 hover:text-gray-700 hover:border-gray-700 basic-transition
        rounded py-1 px-2 text-gray-500 font-light text-sm;
  }

  .button-submit {
    @apply basic-transition w-full justify-center rounded-md border border-transparent bg-amber-100 px-4 py-2
        text-sm font-medium text-amber-700 hover:bg-amber-200 focus:outline-none focus-visible:ring-2
        focus-visible:ring-amber-500 focus-visible:ring-offset-2;
  }
}

